# reactive-hub-py

./: .env.example  .gitignore  README.md  Reactive_Hub_API.postman_collection.json  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  books.py  demo.py  health.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  base.py  book.py
app/schemas/: __init__.py  base.py  book.py
scripts/: db_aliases.sh  sql_templates.sql
